libs/preprocessor/tests/errors/pe23_if_has_include/source.hpp
#if __has_include(something.hpp)
thing = 0;
#else
thing = 1;
#endif
